Mario's comments implemented
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5952 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/elastic/elastic.tex
+++ b/2012/3papers/elastic/elastic.tex
@@ -156,33 +156,37 @@ of (73.5 0.6stat +1.8
 The study of elastic proton-proton scattering reveals many aspects about the structure of the proton, its shape and opacity, i.e.~matter density. It also tests the interplay of non-perturbative and perturbative $\rm pp$ interactions depending on the four-momentum transfer squared $t$ involved in the scattering process.
 % ($t = (p_{\rm i} - p_{\rm f})^2$ with $p_{\rm i,f}$  being the initial and final four-momentum, respectively). 
 
-In several runs with different beam optics, TOTEM has measured at the LHC energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, extended over the $|t|$-range of $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential slope at low $|t|$ followed by a significant diffractive minimum and at larger $|t|$-values a behaviour compatible with the power law already observed at lower energies TODO: reference.
+In several runs with different beam optics, TOTEM has measured at the center of mass energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, extended over the $|t|$-range of $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential decay at low $|t|$ followed by a significant diffractive minimum and at larger $|t|$-values a behaviour compatible with the power law already observed at lower energies TODO: reference.
 
-To access smaller $|t|$-values ($|t| = 0.01\un{GeV^2}$ corresponds at the LHC ($7\un{TeV}$) to a scattering angle of $\approx 29\un{\mu rad}$) the colliding beams must have a beam divergence of a few micro-radiants. This can be obtained by either reducing the beam emittance $\epsilon$ or by increasing the betatron value $\beta^*$ (beam divergence $\propto\sqrt{\epsilon/\beta^*}$). With a dedicated beam optics configuration ($\beta^* = 90\un{m}$) in a special run, TOTEM extended the measurement to $|t|$-values as low as $2\cdot10^{-2}\un{GeV^2}$ \cite{epl96}. This made the extrapolation of the differential cross-section to the optical point at $t=0$ possible and enabled, for the first time at the LHC, the determination of the elastic scattering cross-section as well as the total cross-section by the use of the optical theorem.
+To access smaller $|t|$-values ($|t| = 0.01\un{GeV^2}$ corresponds at $\sqrt s = 7\un{TeV}$ to a scattering angle of $\approx 29\un{\mu rad}$) the colliding beams must have a beam divergence of a few micro-radiants. This can be obtained by either reducing the beam emittance $\epsilon$ or by increasing the betatron value $\beta^*$ (beam divergence $=\sqrt{\epsilon/\beta^*}$). With a dedicated beam optics configuration ($\beta^* = 90\un{m}$) in a special run, TOTEM extended the measurement to $|t|$-values as low as $2\cdot10^{-2}\un{GeV^2}$ \cite{epl96}. This made the extrapolation of the differential cross-section to the optical point at $t=0$ possible and enabled, for the first time at the LHC, the determination of the elastic scattering cross-section as well as the total cross-section by the use of the optical theorem.
 
-In this paper, we concentrate on an improved larger statistic measurement of the $t$-distribution at even smaller $t$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put aggressively close to the beam center ($4.8 \hbox{ to } 6.5\, \sigma_{\rm beam}$). This was possible since in this run the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot had to touch this sharp beam edge. After retraction of 1 to 2 beam sigmas, TOTEM took data in very clean conditions with only few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$. Thanks to that we could observe $91\%$ of the elastic cross-section -- compared to only $67\%$ in paper \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem we dervied the total and inelastic cross-sections too. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated.
+In this paper, we concentrate on an improved $t$-distribution measurement with higher statistics and reaching even smaller $|t|$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put aggressively close to the beam center ($4.8 \hbox{ to } 6.5\, \sigma_{\rm beam}$). This was possible since in this run the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot had to touch this sharp beam edge. After retraction of 1 to 2 beam sigmas, TOTEM took data in very clean conditions with only few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$. Thanks to that we could observe $91\%$ of the elastic cross-section -- compared to only $67\%$ in paper \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem, the total and inelastic cross-sections were derived too. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated.
 
-In a second adjacent paper \cite{P2}, the inelastic cross-section is measured directly, based on the trigger of the forward inelastic detectors. By comparison with the inelastic cross-section, obtained from the difference of the total and the elastic cross-sections, an estimate of the single diffraction at masses below $3\un{GeV}$ that escape our detection is given.
+In a second, adjacent, paper \cite{P2}, the inelastic cross-section is measured directly, based on the trigger of the forward inelastic detectors. By comparison with the inelastic cross-section, obtained from the difference of the total and the elastic cross-sections, an estimate of the single diffraction at masses below $3\un{GeV}$ that escape our detection is given.
 
-The third paper \cite{P3} summarises the different cross-section methods including the luminosity independent determination of the total cross-section. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scatterin amplitude at $t=0$) does not enter in the method of the 2nd paper \cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted confirming the more detector-dependent estimates of CMS. 
+A third paper \cite{P3} summarises the different cross-section methods including the luminosity independent determination of the total cross-section. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scattering amplitude at $t=0$) does not enter in the method of the 2nd paper \cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted confirming the more detector-dependent estimates of CMS. 
+
+
 
 %--------------------------------------------------
 \section{The proton detectors}
 
-The configuration of the TOTEM Roman Pot system and the silicon detector properties were already described in more detail in \cite{jinst} and the first two papers \cite{epl95,epl96}. For the understanding of the analysis, a few basic  system  properties are repeated. 
+The configuration of the TOTEM Roman Pot system and the silicon detector properties were already described in more detail in \cite{jinst,epl95,epl96}. For the understanding of the analysis, a few basic  system  properties are repeated. 
 
 The silicon sensors are placed in movable beam-pipe insertions -- Roman Pots (RP) -- located symmetrically on either side of the LHC interaction point IP5 at distances of $215$ -- $220\un{m}$ from the IP.
 
-Each RP station is composed of two units (near and far) separated by a distance of about $5\un{m}$. A unit consists of 3 RPs, two approaching the outgoing beam vertically from the top and the bottom and one horizontally. Each RP is equipped with a stack of 10 silicon strip detectors measuring the proton distance to the beam center in both coordinates in the plane perpendicular to the beam with a precision of $19\un{\mu m}$ (TODO: verify with Hubert). The RPs are moved from the garage position towards the beam center with a precision of $20\un{\mu m}$ (TODO: verify with Mario). The movement and the alignment of all pots are monitored with a precision of less than $20\un{\mu m}$ based on track reconstruction and external alignment tools.
+Each RP station is composed of two units (near and far) separated by a distance of about $5\un{m}$. A unit consists of 3 RPs, two approaching the outgoing beam vertically from the top and the bottom and one horizontally. Each RP is equipped with a stack of 10 silicon strip detectors measuring the proton distance to the beam center in both coordinates in the plane perpendicular to the beam with a precision of about $11\un{\mu m}$.
+%The RPs are moved from the garage position towards the beam center with a precision of $20\un{\mu m}$.
+The movement and the alignment of all pots are monitored with a precision better than $20\un{\mu m}$ based on track reconstruction and external alignment tools.
 
-The large lever arm between the near and the far unit allows the determination of the scattering angle in both projections with a precision about $5\un{\mu rad}$. The knowledge of both the positions and the scattering angles are vital in the analysis. 
+The large lever arm between the near and the far unit allows the determination of the scattering angle in both projections with a precision of about $5\un{\mu rad}$. The knowledge of both the track positions and angles is vital in the analysis. 
 
 
 
 %--------------------------------------------------
 \section{LHC Optics}
 
-The measurement presented in this paper was performed with the $\beta^*=90\un{m}$ optics, which was described in detail in \cite{epl96}; here we repeat the most important properties only. An elastic proton created at the vertex $(x^*, y^*)$ with the horizontal and vertical scattering angles $(\theta_x^*, \theta_y^*)$ is transported through the LHC magnet lattice and hits the Roman Pots at points $(x, y)$:
+The measurement presented in this paper was performed with the $\beta^*=90\un{m}$ optics, which was described in detail in \cite{epl96}; here we repeat the most important properties only. An elastic proton created at the vertex $(x^*, y^*, z^*=0)$ with the horizontal and vertical scattering angles $(\theta_x^*, \theta_y^*)$ is transported through the LHC magnet lattice and hits the Roman Pots at points $(x, y)$:
 \begin{equation}
 \label{eq:transport}
 \begin{array}{rcl}
@@ -196,24 +200,23 @@ Since $L_x \approx 0$ in the far RP, the corresponding horizontal hit position c
 \label{eq:reconstruction}
 x^* = {x^{\rm F}\over v_x}\ ,\quad
 \theta^*_x = {1\over {\d L_x\over \d s}} \left( \theta_x - {\d v_x\over \d s} x^* \right)\ ,\quad
-\theta^*_y = {y\over L_y}\ .
+\theta^*_y = {y\over L_y}\ ,
 \end{equation}
-The proposed angular-reconstruction formulae optimize the robustness against optics imperfections \cite{epl96}.
+where $s$ denotes the distance from the interaction point. The proposed angular-reconstruction formulae optimize the robustness against optics imperfections \cite{epl96}.
 
 
 %--------------------------------------------------
 \section{Data taking}
 
-The presented data were recorded in October 2011 with the $\beta^* = 90\un{m}$ optics. For this analysis, only one bunch pair was used with an average proton population of $5\cdot10^{10}$ protons/bunch producing an instantaneous luminosity of $6\un{mb^{-1} s^{-1}}$ and an average minimum bias interaction rate of $0.01$ per bunch crossing.
+The presented data were recorded in October 2011 with the $\beta^* = 90\un{m}$ optics. For this analysis, only one bunch pair was used with an average proton population of $6\cdot10^{10}$ protons/bunch producing an instantaneous luminosity of $6\un{mb^{-1}\, s^{-1}}$ and an average inelastic-interaction rate of $0.03$ per bunch crossing.
 
 During the run three data sets were taken with different RP distances to the beam center corresponding to minimum values of the four-momentum transfer squared between $4.6$ and $7.3\cdot10^{-3}\un{GeV^2}$. The different data sets enabled us to quantify and reduce certain systematic uncertainties. A run summary is given in Tab.~\ref{tab:datasets}.
 
-The 1st-level trigger benefits from the 20 hits per proton track and is based on a track segment either in the near or the far unit. This redundancy guarantees a high trigger efficiency (over $99\%$ per proton). A coincidence between a proton on the left and the right side is requested in the typical elastic double-arm signature in the vertical RP detectors with two diagonals (left top -- right bottom or left bottom -- right top). The characteristic of the $\beta^* = 90\un{m}$ optics forces the elastically scattered protons into the vertical RPs, see Fig.~\ref{fig:hit dist}.
+The 1st-level trigger benefits from the 20 possible hits per proton track and is based on a track segment either in the near or the far unit. This redundancy guarantees a high trigger efficiency (over $99\%$ per proton). A coincidence between a proton on the left and the right side of the IP is requested in the typical elastic double-arm signature in the vertical RP detectors with two diagonals (left top -- right bottom or left bottom -- right top). The characteristic of the $\beta^* = 90\un{m}$ optics forces the elastically scattered protons into the vertical RPs, see Fig.~\ref{fig:hit dist}.
 
 \begin{table}
 \caption{Description of the three datasets available. The RP position gives the RP approach to beam in multiples of the beam size ($\sigma_{\rm beam}$). The third column summarizes the numbers of elastic events reconstructed from both diagonals. The $\mathcal{L}_{\rm int}$ gives the integrated
-%effective (taking into account the DAQ efficiency)
-luminosity for each dataset. The last column shows the lowest $|t|$ values reached.}
+luminosity for each dataset, taking into account the DAQ inefficiency. The last column shows the lowest $|t|$ values reached.}
 \label{tab:datasets}
 \begin{center}
 \vskip-3mm
@@ -232,13 +235,13 @@ luminosity for each dataset. The last column shows the lowest $|t|$ values reach
 %--------------------------------------------------
 \section{Analysis}
 
-The analysis is very similar the one of \cite{epl96}. Here, we take advantage of having three datasets (each with two diagonal) analyzed separately, thus leading to a better control over the systematics.
+The analysis is very similar to the one of \cite{epl96}. Here, we take advantage of having three datasets (each with two diagonals) analyzed separately, thus leading to a better control over the systematics.
 
 
 %-------------------------
 \subsection{Alignment}
 
-Three complementary methods were applied. First, the RP position was roughly determined from the beam-edge touching. Then, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Since the elastic event tagging does not require precise alignment, we could use an elastic pre-selection for alignment fine-tuning. By exploiting the azimuthal symmetry of elastic scattering%
+Three complementary methods were applied \cite{jan_thesis}. First, the RP position was roughly determined from the beam-based alignment \cite{mario_ipac_2011}. Second, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Third, since the elastic event tagging does not require precise alignment, an alignment fine-tuning was performed on a sample obtained from an elastic pre-selection. By exploiting the azimuthal symmetry of elastic scattering%
 %and taking advantage of the very small effective length $L_x$
 , we could adjust the horizontal and vertical shifts and the tilt of each unit. The effect of residual misalignments on $\d\sigma_{\rm el}/\d t$ was thus smaller than $0.3\%$ for every $t$-bin.
 
@@ -246,7 +249,9 @@ Three complementary methods were applied. First, the RP position was roughly det
 %-------------------------
 \subsection{Elastic tagging}
 
-The cuts used to select the elastic events are summarized in Tab.~\ref{tab:cuts}. The cuts 1 and 2 require the reconstructed track collinearity between the left and right arms. The cuts 3-6 effectively work as low-$\xi$ cuts ($\xi$ denotes the fractional momentum loss of a proton). If $\xi$ is non-negligible, the vertex ($x^*$) reconstruction Eq.~\ref{eq:reconstruction} becomes invalid. Similarly, the correlation between the track position ($y^{\rm N}$) and the track angle (proportional to $y^{\rm F} - y^{\rm N}$) is lost. The cut 7 compares the horizontal vertex position reconstructed from the left and right arms. It is the strongest single cut and is very effective against the beam-halo background, see Fig.~\ref{fig:hit dist}.
+The cuts used to select the elastic events are summarized in Tab.~\ref{tab:cuts}. The cuts 1 and 2 require the reconstructed-track collinearity between the left and right arm. The cuts 3 to 6 effectively work as low-$\xi$ cuts ($\xi$ being the fractional momentum loss of a proton).
+The cuts 3 and 4: if $\xi\neq 0$, the vertex ($x^*$) reconstruction Eq.~(\ref{eq:reconstruction}) becomes invalid.
+The cuts 5 and 6: if $\xi\neq 0$, the correlation between the track position ($y^{\rm N}$) and the track angle (proportional to $y^{\rm F} - y^{\rm N}$) is lost. The cut 7 compares the horizontal vertex position reconstructed from the left and right arms. It is the strongest single cut and is very effective against the beam-halo background, see Fig.~\ref{fig:hit dist}.
 
 \begin{table}
 \caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, the N and F corresponds to the near and far units. The constant $\alpha = L_y^{\rm F} / L_y^{\rm N} - 1 \approx 0.11$. The right-most column gives the RMS of the cut distribution ($\equiv 1\sigma$), all cuts are applied at $3\sigma$-level.
@@ -271,28 +276,32 @@ diagonal &\multispan2 \hss track reconstructed in all 4 diagonal RPs \hss \cr
 %-------------------------
 \subsection{Kinematics reconstruction}
 
-The scattering angles were reconstructed for each arm according to Eq.~\ref{eq:reconstruction}. The corresponding uncertainties were $1.3\%$ and $0.8\%$ for $\theta^*_x$ and $\theta^*_y$ respectively. The former one has a more pronounced effect on $\d\sigma_{\rm el}/\d t$ (due to higher value and no acceptance cut in $\theta^*_x$) and is the leading systematic uncertainty for larger $|t|$ values, cf.~Tab.~\ref{tab:systematics}.
+The scattering angles were reconstructed for each arm according to Eq.~(\ref{eq:reconstruction}). The corresponding uncertainties were $1.3\%$ and $0.8\%$ for $\theta^*_x$ and $\theta^*_y$ respectively. The former one has a more pronounced effect on $\d\sigma_{\rm el}/\d t$
+%(due to its higher value and the absence of limitations like the $\theta^*_y$ aperture limitation shown in Fig.~\ref{fig:hit dist})
+and is the leading systematic uncertainty for larger $|t|$ values, cf.~Tab.~\ref{tab:systematics}.
 
-For elastic events, we averaged the angles reconstructed from left and right arms, which leads to an uncertainty reduction.
+For elastic events, the angles reconstructed from left and right arms were averaged, which leads to an uncertainty reduction.
 
 %-------------------------
 \subsection{Background}
 
-The background contribution (i.e.~all non-elastic events passing the selection cuts) was estimated by relaxing the strongest single cut (number 7 in Tab.~\ref{tab:cuts}) and analyzing the distribution of $x^{*\rm R} - x^{*\rm L}$. This distribution can reasonably be described by two Gaussians -- one for the signal and for the background. We determined the background/signal ratio to be $(0.8 \pm 0.4)\%$.
+The background contribution (i.e.~all non-elastic events passing the selection cuts) was estimated by omitting the strongest single cut (number 7 in Tab.~\ref{tab:cuts}) and analyzing the distribution of $x^{*\rm R} - x^{*\rm L}$. This distribution can reasonably be described by two Gaussians -- one for the signal and one for the background. By interpolating the background tails ($|\Delta x^*| > 3\sigma$) into the signal region ($|\Delta x^*| < 3\sigma$), the background/signal ratio was determined as $(0.8 \pm 0.4)\%$.
 
 
 %-------------------------
 \subsection{Acceptance correction}
 
-We identified two acceptance limitations: the detector edge (relevant for lower $|t|$) and the LHC aperture limitation shown in Fig.~\ref{fig:hit dist} right (relevant for higher $|t|$). Both effects were treated by assuming azimuthal symmetry of the elastic scattering and by correcting for smearing around the limitation edges. In order to keep the uncertainty on a reasonable level, we constrained ourselves to the region where the full acceptance correction was no larger than 7.5 (considering both diagonals).
+We identified two acceptance limitations: the detector edge (relevant for lower $|t|$) and the LHC aperture limitation shown in Fig.~\ref{fig:hit dist} right (relevant for higher $|t|$). Both effects were treated by assuming azimuthal symmetry of the elastic scattering and by correcting for smearing around the limitation edges. In order to keep the uncertainty on a reasonable level, we constrained ourselves to the region where the full acceptance correction was not larger than a factor $7.5$%
+%(considering both diagonals)
+.
 
 
 %-------------------------
 \subsection{Unfolding of resolution effects}
 
-The angular resolution was determined by comparing the scattering angles reconstructed from the left and right arm. Combining all three datasets and all diagonals yields one-arm resolutions $(6.36\pm 0.21)\un{\mu rad}$ in $\theta^*_x$ and $(2.47\pm 0.07)\un{\mu rad}$ in $\theta^*_y$. The latter one is predominantly given by the beam-divergence, the $\theta^*_x$ resolution is deteriorated by a contribution from the finite detector pitch.
+The angular resolution was determined by comparing the scattering angles reconstructed from the left and right arm. Combining all three datasets and all diagonals yields one-arm resolutions $(6.36\pm 0.21)\un{\mu rad}$ in $\theta^*_x$ and $(2.47\pm 0.07)\un{\mu rad}$ in $\theta^*_y$. The latter is predominantly given by the beam-divergence, the $\theta^*_x$ resolution is deteriorated by a contribution from the finite detector pitch.
 
-The $t$-resolution impact on $\d\sigma_{\rm el}/\d t$  was determined (and eliminated) by an iterative procedure. That starts by taking the observed (smeared) $t$-distribution as an input to a Monte-Carlo calculation of the un-smearing correction. The correction is applied to the observed $t$-distribution which yields a better estimate of the true $t$-distribution. These two steps were repeated three times in total. The systematic uncertainty of this procedure (due to the uncertainty of the $\theta^*_{x, y}$ resolution) was estimated smaller than $0.5\%$.
+The $t$-resolution impact on $\d\sigma_{\rm el}/\d t$  was determined (and eliminated) by an iterative procedure, Tthat starts by taking the observed (smeared) $t$-distribution as an input to a Monte-Carlo calculation of the un-smearing correction. The correction is applied to the observed $t$-distribution and yields a better estimate of the true $t$-distribution. These two steps were repeated three times in total. The systematic uncertainty of this procedure (due to the uncertainty of the $\theta^*_{x, y}$ resolution) was estimated smaller than $0.5\%$.
 
 %-------------------------
 \subsection{Efficiencies}
@@ -302,19 +311,19 @@ The efficiency of the RP trigger was estimated using the zero-bias data stream. 
 
 The DAQ efficiency was determined by comparing the numbers of triggered and recorded events, yielding $(98.142 \pm 0.001)\%$.
 
-There are several reasons for reconstruction inefficiency: intrinsic RP detection inefficiency of each silicon sensor, proton interaction with the material of a RP and ``pile-up'' of several protons in one event (RPs can fully reconstruct at most one track). For the last case, the most important situation is a coincidence of an elastic proton and a beam-halo proton, see Fig.~\ref{fig:hit dist}.
+There are several reasons for reconstruction inefficiency: intrinsic RP detection inefficiency of each silicon sensor, proton interaction with the material of a RP and ``pile-up'' of several protons in one event (RPs can uniquely reconstruct only one track). For the last case, the most important contribution is a coincidence of an elastic proton and a beam-halo proton, see Fig.~\ref{fig:hit dist}.
 
-Uncorrelated inefficiencies of single RPs were studied by removing the examined RP from the selection cuts (only cut 2 can be kept then) and counting the recuperated events. The result of this study was an inefficiency of $(1.5 \pm 0.2)\%$ for the near and $(3.0 \pm 0.2)\%$ for the far RPs. This difference can be explained by proton interactions in the near pot that affect the far RP too. This near-far correlated inefficiency was determined from data by counting events with corresponding shower signatures, yielding $(1.5\pm 0.7)\%$.
+Uncorrelated inefficiencies of single RPs were studied by removing the examined RP from the selection cuts and counting the recuperated events. For this study, only the cut 2 could be kept -- the others require both near and far RP measurements. The result was an inefficiency of $(1.5 \pm 0.2)\%$ for the near and $(3.0 \pm 0.2)\%$ for the far RPs. This difference can be explained by proton interactions in the near pot that affect the far RP too. This near-far correlated inefficiency was determined from data by counting events with corresponding shower signatures, yielding $(1.5\pm 0.7)\%$.
 % confirmation from MC simulations.
 
-The ``pile-up'' inefficiency was determined from the zero-bias data stream by evaluating the probability of finding a track in both RPs on either side. This probability was found increasing as RPs approached the beam. For instance, for the diagonal bottom-left top-right, the probabilities were $(3.9 \pm 0.3)\%$, $(6.2 \pm 0.3)\%$ and $(7.9 \pm 0.3)\%$ for the datasets 1, 2 and 3 respectively.
+The ``pile-up'' inefficiency was calculated from the probability of finding an additional track (on top of the elastic) in any station of a diagonal. This probability was determined from the zero-bias data stream and was found increasing as RPs approached the beam. For instance, for the diagonal bottom-left top-right, the probabilities were $(3.9 \pm 0.3)\%$, $(6.2 \pm 0.3)\%$ and $(7.9 \pm 0.3)\%$ for the datasets 1, 2 and 3 respectively.
 
 
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/hit_dist.pdf}
 \vskip-5mm
-\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{tab:cuts}). The left plot clearly indicates the presence of the beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ which is a consequence of the LHC aperture limitations. }
+\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{tab:cuts}). The left plot clearly indicates the presence of the beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ as a consequence of the LHC aperture limitations. }
 \label{fig:hit dist}
 \end{center}
 \end{figure*}
@@ -322,7 +331,9 @@ The ``pile-up'' inefficiency was determined from the zero-bias data stream by ev
 %-------------------------
 \subsection{Luminosity}
 
-In this paper, we use the luminosity measured by CMS with a $4\%$-uncertainty estimate (no dedicated low-luminosity performance studies have been performed). Luminosity-independent results will be given in the adjacent paper \cite{P3}.
+In this paper, we use the luminosity measured by CMS with a $4\%$-uncertainty estimate%
+%(no dedicated low-luminosity performance studies have been performed)
+. Luminosity-independent results will be given in the adjacent paper \cite{P3}.
 
 % Ken's pedestal subtraction
 
@@ -340,18 +351,17 @@ The fits were performed from the lowest accessible $|t|$ values (see $|t|_{\rm m
 
 % Statistical uncertainty negligible, see Tab.~\ref{tab:results}.
 
-For each of the analysis steps above, the systematic uncertainty was determined, and their combination was studied with a Monte-Carlo simulation. We treated separately analysis $t$-dependent, analysis $t$-independent (normalization) and luminosity uncertainties, the results are shown in Tab.~\ref{tab:systematics}. Since there is a number of contributions in each category, we combined the uncertainties in quadrature. So we did for the total uncertainty.
+For each of the analysis steps above, the systematic uncertainty effect on $\d\sigma_{\rm el}/\d t$ was estimated with a Monte-Carlo simulation. Tab.~\ref{tab:systematics} summarizes these uncertainties for several $|t|$ values, grouping the contributions in three categories: $t$-dependent, $t$-independent (normalization) and luminosity uncertainties. Since there is a number of contributions in each category, the uncertainties were combined in quadrature.
 
-The luminosity uncertainty is the leading systematic effect for $|t| < 0.2\un{GeV^2}$, above that it is the uncertainty of $\d L_x/\d s$ which dominates. The optics-related error contribution is almost vanishing around $|t| = 0.06\un{GeV^2}$ and has opposite signs left and right of that point. Therefore there is a partial error cancellation in the integrated elastic cross-section. Consequently the relative error of $\sigma_{\rm el}$ is significantly lower than the one of $\d\sigma_{\rm el}/\d t|_0$ -- see Tab.~\ref{tab:results}.
-
-The Monte-Carlo simulation confirms that there is a strong correlation between the errors of $\sigma_{\rm el}$ and $\d\sigma_{\rm el}/\d t|_0$ -- the correlation coefficient is $0.76$ (when both $t$-dependent and normalization contributions are included).
+The luminosity uncertainty is the leading systematic effect for $|t| < 0.2\un{GeV^2}$, above that it is the uncertainty of $\d L_x/\d s$ which dominates. The optics-related error contribution is almost vanishing around $|t| = 0.06\un{GeV^2}$ and has opposite signs below and above of that point. Therefore there is a partial error cancellation in the integrated elastic cross-section $\sigma_{\rm el}$ and consequently the relative error of $\sigma_{\rm el}$ is significantly lower than the one of $\d\sigma_{\rm el}/\d t|_0$ -- see Tab.~\ref{tab:results}. Moreover, there is a strong correlation between the errors of $\sigma_{\rm el}$ and $\d\sigma_{\rm el}/\d t|_0$ -- the correlation coefficient is $0.76$.
+% (when both $t$-dependent and normalization contributions are included).
 
 \begin{largetable}
 \caption{Overview of the systematic uncertainties of the differential cross-section $\d\sigma_{\rm el}/\d t$.}
 %\vskip-3mm
 \label{tab:systematics}
 \begin{tabular}{cccccccccc}\hline
-$t\ung{GeV^2}$ &	0.005 &	0.01 &	0.06 &	0.1 &	0.12 &	0.16 &	0.2 &	0.3 &	0.4\cr\hline
+$|t|\ung{GeV^2}$ &	0.005 &	0.01 &	0.06 &	0.1 &	0.12 &	0.16 &	0.2 &	0.3 &	0.4\cr\hline
 $t$-dependent &	1.8\% &	1.0\% &	0.3\% &	0.9\% &	1.2\% &	3.0\% &	4.4\% &	8.3\% &	12.3\%\cr
 normalization &\multispan9\hfil	1.2\%\hfil  \cr
 luminosity &\multispan9\hfil	4.0\%\hfil  \cr\hline
@@ -383,7 +393,7 @@ Tab.~\ref{tab:data medium t} presents the $\d\sigma_{\rm el}/\d t$ continuation 
 \begin{center}
 \includegraphics{fig/dsdt_comp.pdf}
 \vskip-5mm
-\caption{A compilation of the elastic differential cross-section measurements by TOTEM. Each measurement is shown in different color. The embedded figure provides a zoom of a low-$|t|$ region, showing the lowest $|t|$-values accessible in the analysis from Ref.~\cite{epl96} (green) and this analysis (red).}
+\caption{A compilation of the elastic differential cross-section measurements by TOTEM. Each measurement is shown in different color. The embedded figure provides a zoom of the region used for extrapolation to $t=0$, showing the lowest $|t|$-values accessible in the analysis from Ref.~\cite{epl96} (green) and this analysis (red).}
 \label{fig:dsdt}
 \end{center}
 \end{figure*}
@@ -488,7 +498,7 @@ $0.6434$ & $0.0041$ & $\S24.65$ & $0.99$ & $^{\s6.87}_{\s9.30}$ && $1.0647$ & $0
 
 
 \begin{table}
-\caption{Elastic slopes $B$ in $\rm GeV^{-2}$ obtained from parameterization Eq.~\ref{eq:extrapolation} fitted through intervals $|t|_{\rm low}$ to $|t|_{\rm high}$. The first error is statistical, the second systematic.}
+\caption{Elastic slopes $B$ in $\rm GeV^{-2}$ obtained from parameterization Eq.~(\ref{eq:extrapolation}) fitted through intervals $|t|_{\rm low}$ to $|t|_{\rm high}$. The first error is statistical, the second systematic.}
 \label{tab:B}
 \begin{center}
 \begin{tabular}{l|cc}
@@ -501,7 +511,7 @@ $0.020\un{GeV^2}$ & $19.93 \pm 0.05 \pm 0.21$ & $19.87 \pm 0.03 \pm 0.33$\cr
 
 The measured differential cross-section exhibits purely-exponential decay for $|t| < 0.2\un{GeV^2}$. Tab.~\ref{tab:B} gives elastic slopes $B$ extracted from several $|t|$ regions. All the results are compatible mutually and with the value $B = (20.1 \pm 0.2^{\rm stat} \pm 0.3^{\rm syst})$ determined in our previous publication \cite{epl96} (where the $\d\sigma_{\rm el}/\d t$ data were available only down to $|t| = 0.02\un{GeV^2}$).
 
-By extrapolating the differential cross-section to $t=0$ (see Eq.~\ref{eq:extrapolation}), we determined the intercept
+By extrapolating the differential cross-section to $t=0$ (see Eq.~(\ref{eq:extrapolation})), we determined the intercept
 $\d\sigma_{\rm el}/\d t|_0 = (506.4 \pm 0.9^{\rm stat} \pm 23.0^{\rm syst})\un{mb}$
 -- details on the uncertainty composition can be found in Tab.~\ref{tab:results}. In order to calculate the integrated elastic cross-section, the $\d\sigma_{\rm el}/\d t$ data were summed up to $|t| = 0.415\un{GeV^2}$ and the extrapolation was used to determine the low-$|t|$ contribution, where no measurements are available. Due to the very close RP approach to the beam, the ratio of extrapolated to observed elastic cross-section was less than $10\%$. The effect of the neglected higher-$t$ contributions is small compared to the other uncertainties. The calculation yielded $\sigma_{\rm el} = (25.43 \pm 0.03^{\rm stat} \pm 1.07^{\rm syst})\un{mb}$.
 
@@ -513,7 +523,7 @@ The optical theorem permits to calculate the total and inelastic cross-sections:
 \end{equation}
 Taking the COMPETE \cite{compete} preferred-model extrapolation of $0.141\pm 0.007$ for the $\rho$ parameter yields
 $\sigma_{\rm tot} = 98.6\un{mb}  \pm 2.3\%^{\rm syst}$ and
-$\sigma_{\rm inel} = 73.2\un{mb} \pm 1.7\%^{\rm syst}$ (details on the uncertainty composition are given in Tab.~\ref{tab:results}). Taking the full COMPETE error band (from considering a handful of fit models) for the $\rho$ parameter $^{+0.01}_{-0.08}$, would result in $\sigma_{\rm tot}$ variation of $^{+0.8}_{-0.1}$. Even that error would be small compared to the other uncertainty contributions.
+$\sigma_{\rm inel} = 73.2\un{mb} \pm 1.7\%^{\rm syst}$ (details on the uncertainty composition are given in Tab.~\ref{tab:results}). Taking the full COMPETE error band (from considering several fit models) for the $\rho$ parameter $^{+0.01}_{-0.08}$, would result in $\sigma_{\rm tot}$ variation of $^{+0.8}_{-0.1}$. Even that error would be small compared to the other uncertainty contributions.
 
  
 
@@ -559,7 +569,7 @@ TODO: planning to repeat the measurement at $\sqrt s = 8\un{TeV}$
 \begin{figure}
 \onefigure{fig/B_s.pdf}
 \vskip-5mm
-\caption{(Color online) The elastic slope $B$ (see Eq.~\ref{eq:extrapolation}) as a function of the scattering energy $\sqrt s$. $\rm pp$ and $\rm \bar pp$ data from \cite{pdg}.}
+\caption{(Color online) The elastic slope $B$ (see Eq.~(\ref{eq:extrapolation})) as a function of the scattering energy $\sqrt s$. $\rm pp$ and $\rm \bar pp$ data from \cite{pdg}.}
 \label{fig:B s}
 \end{figure}
 
@@ -572,6 +582,9 @@ Acknowledgements -- Insert here the text.
 
 %--------------------------------------------------
 \begin{thebibliography}{0}
+
+% initials after
+% TODO: sort the papers as they appear in text
 
 \bibitem{epl95}
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
@@ -590,11 +603,11 @@ Acknowledgements -- Insert here the text.
 
 \bibitem{lafferty94}
  	%``Where to stick your data points: The treatment of measurements within wide bins,''
-	\Name{Lafferty G.~D.~and Wyatt T.~R.}
+	\Name{Lafferty G.~D.~\and Wyatt T.~R.}
 	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
 
 \bibitem{compete} 
-	\Name{J.~R.~Cudell~\etal{} (COMPETE Collaboration)}
+	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
 
 \bibitem{P2} 
@@ -608,6 +621,18 @@ Acknowledgements -- Insert here the text.
 \bibitem{pdg} 
 	\Name{Nakamura K.~\etal{} (Particle Data Group)}
 	\REVIEW{J.~Phys.}{G37}{2010}{075021}
+
+\bibitem{jan_thesis}
+	\Name{Ka\v spar J.}
+	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
+
+\bibitem{mario_ipac_2011}
+	\Name{Deile M.}
+	{\it The First 1 1/2 Years of TOTEM Roman Pot Operation at LHC}, in
+	{\it Proceedings of the 2nd International Particle Accelerator Conference (IPAC 2011), San Sebastian, Spain}. 
+	%{\tt http://accelconf.web.cern.ch/AccelConf/IPAC2011/papers/mopo011.pdf}
+	arXiv:1110.5808v1
+	
 
 
 %\bibitem{b.b}
